<resources>
    <string name="app_name">Note Taker</string>
    <string name="no_elements_info">There are no notes at the time</string>
    <string name="new_note">Add new note</string>
    <string name="scanned_option">Add note with scanned text</string>
    <string name="date_format">dd-MM-yyyy HH:mm:ss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note_title">Add note title</string>
    <string name="add_note_content">Add note content</string>
    <string name="scan_photo">Scan photo</string>
    <string name="cancel">Cancel</string>
    <string name="file_name_key">fileName</string>
    <string name="scan_text_key">scan_text</string>
    <string name="confirm_note">Confirm note</string>
    <string name="note_key">note_key</string>
    <string name="empty_fields_info">Both fields cannot be empty</string>
    <string name="set_alarm">set alarm</string>
    <string name="wrong_alarm_info">Cannot set alarm in the past! You don\'t have time machine</string>
    <string name="multimedia_tag_hint">Add tag</string>
    <string name="add_photo">Add photo</string>
    <string name="add_tag">Add tag</string>
    <string name="vie_image_type">image/*</string>
    <string name="authority">com.holzhausen.mediastore.authority2</string>
</resources>