<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/no_elements_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_space_between_elements"
        android:text="@string/no_elements_info"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.nambimobile.widgets.efab.ExpandableFabLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.nambimobile.widgets.efab.Overlay
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:overlay_orientation="portrait"/>
        <com.nambimobile.widgets.efab.ExpandableFab
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            app:efab_orientation="portrait"/>
        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/new_note_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_orientation="portrait"
            app:label_text="@string/new_note"
            app:fab_icon="@drawable/ic_baseline_edit_note_24"/>
        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/scan_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_orientation="portrait"
            app:label_text="@string/scanned_option"
            app:fab_icon="@drawable/ic_baseline_camera_enhance_24"
            />


    </com.nambimobile.widgets.efab.ExpandableFabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>