<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TagGalleryFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTagTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_space_between_elements"
        android:layout_marginTop="@dimen/standard_space_between_elements"
        android:layout_marginEnd="@dimen/input_left_and_right_margin"
        android:hint="@string/multimedia_tag_hint"
        app:layout_constraintEnd_toStartOf="@+id/add_tag_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tag_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:id="@+id/tagScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_space_between_elements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTagTextField">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tag_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!--            <com.google.android.material.chip.Chip-->
            <!--                android:id="@+id/chip_1"-->
            <!--                style="@style/Widget.MaterialComponents.Chip.Entry"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:visibility="gone"-->
            <!--                tools:text="Tag1" />-->

            <!--            <com.google.android.material.chip.Chip-->
            <!--                android:id="@+id/chip_2"-->
            <!--                style="@style/Widget.MaterialComponents.Chip.Entry"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:visibility="gone"-->
            <!--                tools:text="Tag2" />-->

            <!--            <com.google.android.material.chip.Chip-->
            <!--                android:id="@+id/chip_3"-->
            <!--                style="@style/Widget.MaterialComponents.Chip.Entry"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:visibility="gone"-->
            <!--                tools:text="Tag3" />-->

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/standard_space_between_elements"
        android:layout_marginBottom="@dimen/standard_space_between_elements"
        app:layout_constraintBottom_toTopOf="@+id/add_photo_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tagScrollView" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_photo_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_space_between_elements"
        android:layout_marginEnd="@dimen/small_space"
        android:layout_marginBottom="@dimen/standard_space_between_elements"
        android:text="@string/add_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_note_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_note_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_space"
        android:layout_marginEnd="@dimen/standard_space_between_elements"
        android:layout_marginBottom="@dimen/standard_space_between_elements"
        android:text="@string/confirm_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_photo_button" />

    <Button
        android:id="@+id/add_tag_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="@dimen/standard_space_between_elements"
        android:text="@string/add_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>